--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "~0.14.3",
     "react": "~0.14.3",
     "express": "~4.13.3",
-    "mongoose": "~4.3.1"
+    "mongoose": "~4.3.1",
+    "cookie-parser": "~1.4.0"
   },
   "devDependencies": {
     "babel-core": "~6.3.17",
