--- a/package.json
+++ b/package.json
@@ -19,11 +19,20 @@
     "react": "~0.14.3",
     "express": "~4.13.3",
     "mongoose": "~4.3.1",
-    "cookie-parser": "~1.4.0"
+    "cookie-parser": "~1.4.0",
+    "jade": "~1.11.0",
+    "express-graphql": "~0.4.5"
   },
   "devDependencies": {
     "babel-core": "~6.3.17",
     "babel-preset-es2015": "~6.3.13",
-    "babel-preset-react": "~6.3.13"
+    "babel-preset-react": "~6.3.13",
+    "co-supertest": "0.0.10",
+    "es6-promise": "~3.0.2",
+    "babelify": "~7.2.0",
+    "co-mocha": "~1.1.2",
+    "browserify": "~12.0.1",
+    "sinon-chai": "~2.8.0",
+    "babel-polyfill": "~6.3.14"
   }
 }
