--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mongoose": "~4.3.1",
     "cookie-parser": "~1.4.0",
     "jade": "~1.11.0",
-    "express-graphql": "~0.4.5"
+    "express-graphql": "~0.4.5",
+    "moment": "~2.10.6",
+    "superagent": "~1.6.1"
   },
   "devDependencies": {
     "babel-core": "~6.3.17",
