--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "co-mocha": "~1.1.2",
     "browserify": "~12.0.1",
     "sinon-chai": "~2.8.0",
-    "babel-polyfill": "~6.3.14"
+    "babel-polyfill": "~6.3.14",
+    "fs-extra": "~0.26.4"
   }
 }
