--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "moment": "~2.10.6",
     "superagent": "~1.6.1",
     "object-assign": "~4.0.1",
-    "body-parser": "~1.14.2"
+    "body-parser": "~1.14.2",
+    "multer": "~1.1.0"
   },
   "devDependencies": {
     "babel-core": "~6.3.17",
